--- a/lab04/src/main/resources/templates/product/create.html
+++ b/lab04/src/main/resources/templates/product/create.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="vi"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{_layout}">
 
 <head>
     <meta charset="UTF-8">
-    <title>Create product</title>
+    <title>Tạo sản phẩm</title>
 </head>
 
 <body>
@@ -18,37 +18,37 @@
           class="form"
           enctype="multipart/form-data">
 
-        <!-- Name -->
+        <!-- Tên -->
         <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name">Tên</label>
             <input class="form-control"
                    type="text"
                    th:field="*{name}"
                    id="name"
-                   placeholder="product Name">
+                   placeholder="Tên sản phẩm">
             <div class="alert alert-warning"
                  th:if="${#fields.hasErrors('name')}"
                  th:errors="*{name}">
             </div>
         </div>
 
-        <!-- Price -->
+        <!-- Giá -->
         <div class="form-group">
-            <label for="price">Price</label>
+            <label for="price">Giá</label>
             <input class="form-control"
                    type="number"
                    th:field="*{price}"
                    id="price"
-                   placeholder="price">
+                   placeholder="Giá">
             <div class="alert alert-warning"
                  th:if="${#fields.hasErrors('price')}"
                  th:errors="*{price}">
             </div>
         </div>
 
-        <!-- Image -->
+        <!-- Ảnh -->
         <div class="form-group">
-            <label for="image">Image:</label>
+            <label for="image">Ảnh:</label>
             <input class="form-control"
                    type="file"
                    id="image"
@@ -60,9 +60,9 @@
             </div>
         </div>
 
-        <!-- Category -->
+        <!-- Danh mục -->
         <div class="form-group">
-            <label for="category" class="form-label">Category:</label>
+            <label for="category" class="form-label">Danh mục:</label>
             <select th:field="*{category.id}"
                     class="form-control"
                     id="category">
@@ -77,9 +77,9 @@
             </div>
         </div>
 
-        <input type="submit"
-               class="btn btn-success"
-               value="Add Product">
+     <input type="submit"
+         class="btn btn-success"
+         value="Thêm sản phẩm">
 
     </form>
 </div>
