--- a/lab04/src/main/resources/templates/product/edit.html
+++ b/lab04/src/main/resources/templates/product/edit.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{_layout}">
+<html lang="vi"
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{_layout}">
 
 <head>
     <meta charset="UTF-8">
-    <title>Edit product</title>
+    <title>Sửa sản phẩm</title>
 </head>
 
 <body>
@@ -20,43 +20,43 @@
 
         <input type="hidden" th:field="*{id}"/>
 
-        <!-- Name -->
+        <!-- Tên -->
         <div class="form-group">
-            <label>Name</label>
+            <label>Tên</label>
             <input class="form-control"
                    type="text"
                    th:field="*{name}">
         </div>
 
-        <!-- Price -->
+        <!-- Giá -->
         <div class="form-group">
-            <label>Price</label>
+            <label>Giá</label>
             <input class="form-control"
                    type="number"
                    th:field="*{price}">
         </div>
 
-        <!-- Current Image -->
+        <!-- Ảnh hiện tại -->
         <div class="form-group">
-            <label>Current Image</label><br>
+            <label>Ảnh hiện tại</label><br>
             <img th:src="@{/images/} + ${product.image}"
                  width="150"
                  height="120"
-                 alt="Product Image">
+                 alt="Ảnh sản phẩm">
         </div>
 
-        <!-- New Image -->
+        <!-- Ảnh mới -->
         <div class="form-group">
-            <label>New Image</label>
+            <label>Ảnh mới</label>
             <input class="form-control"
                    type="file"
                    name="imageProduct"
                    accept="image/png,image/jpeg">
         </div>
 
-        <!-- Category -->
+        <!-- Danh mục -->
         <div class="form-group">
-            <label>Category</label>
+            <label>Danh mục</label>
             <select th:field="*{category.id}" class="form-control">
                 <option th:each="category : ${categories}"
                         th:value="${category.id}"
@@ -66,11 +66,11 @@
         </div>
 
         <button type="submit" class="btn btn-success">
-            Update Product
+            Cập nhật sản phẩm
         </button>
 
         <a th:href="@{/products}" class="btn btn-secondary">
-            Cancel
+            Hủy
         </a>
 
     </form>
